[gd_scene load_steps=12 format=3 uid="uid://d0dkq5xxxrif"]

[ext_resource type="Texture2D" uid="uid://bsvq8lbesc0ya" path="res://assets/ingredients/low_res/pepper.png" id="1_h2heg"]
[ext_resource type="Script" path="res://scenes/player/pepper_bomb.gd" id="1_t3f7g"]
[ext_resource type="Texture2D" uid="uid://bvnyjeskf1jda" path="res://assets/ingredients/explosion.png" id="3_op4qj"]
[ext_resource type="Texture2D" uid="uid://ncxj0hrccpg" path="res://assets/environment/white_orb.png" id="4_h7sqo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2nwu0"]
radius = 37.4833

[sub_resource type="CircleShape2D" id="CircleShape2D_36t74"]
radius = 44.0454

[sub_resource type="CircleShape2D" id="CircleShape2D_1wryy"]
radius = 110.454

[sub_resource type="Animation" id="Animation_dlaui"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_2th6j"]
resource_name = "blink"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_220pg"]
resource_name = "explode"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xdlv2"]
_data = {
"RESET": SubResource("Animation_dlaui"),
"blink": SubResource("Animation_2th6j"),
"explode": SubResource("Animation_220pg")
}

[node name="PepperBomb" type="RigidBody2D"]
collision_layer = 16
collision_mask = 31
script = ExtResource("1_t3f7g")

[node name="Pepper" type="Sprite2D" parent="."]
position = Vector2(0, -3.5)
texture = ExtResource("1_h2heg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2nwu0")

[node name="ExplosionTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionTrigger"]
shape = SubResource("CircleShape2D_36t74")

[node name="ExplosionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionZone"]
shape = SubResource("CircleShape2D_1wryy")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xdlv2")
}
autoplay = "blink"

[node name="ExplosionSprite" type="Sprite2D" parent="."]
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_op4qj")
hframes = 16

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.317647, 0, 1)
texture = ExtResource("4_h7sqo")

[connection signal="body_entered" from="ExplosionTrigger" to="." method="_on_explosion_trigger_body_entered"]
[connection signal="body_entered" from="ExplosionZone" to="." method="_on_explosion_zone_body_entered"]
[connection signal="body_exited" from="ExplosionZone" to="." method="_on_explosion_zone_body_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
